tests/integration/compile-fail/invalid_serializer.stderr
error: unexpected end of input
 --> $DIR/invalid_serializer.rs:3:1
  |
3 | serde::format_description!(); // unexpected end of input
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "bad string"
 --> $DIR/invalid_serializer.rs:4:28
  |
4 | serde::format_description!("bad string", OffsetDateTime, "[year] [month]"); // module name is not ident
  |                            ^^^^^^^^^^^^

error: unexpected token: :
 --> $DIR/invalid_serializer.rs:5:37
  |
5 | serde::format_description!(my_format: OffsetDateTime, "[year] [month]"); // not a comma
  |                                     ^

error: unexpected end of input
 --> $DIR/invalid_serializer.rs:6:1
  |
6 | serde::format_description!(my_format,); // missing formattable and string
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
 --> $DIR/invalid_serializer.rs:7:39
  |
7 | serde::format_description!(my_format, "[year] [month]"); // missing formattable
  |                                       ^^^^^^^^^^^^^^^^

error: unexpected token: "[year] [month]"
 --> $DIR/invalid_serializer.rs:8:44
  |
8 | serde::format_description!(OffsetDateTime, "[year] [month]"); // missing ident
  |                                            ^^^^^^^^^^^^^^^^

error: unexpected end of input
 --> $DIR/invalid_serializer.rs:9:1
  |
9 | serde::format_description!(my_format, OffsetDateTime); // missing string format
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected string
  --> $DIR/invalid_serializer.rs:10:1
   |
10 | serde::format_description!(my_format, OffsetDateTime,); // missing string format
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `serde::format_description` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected token: "[year] [month]"
  --> $DIR/invalid_serializer.rs:11:54
   |
11 | serde::format_description!(my_format, OffsetDateTime "[year] [month]"); // missing comma
   |                                                      ^^^^^^^^^^^^^^^^

error: unexpected token: :
  --> $DIR/invalid_serializer.rs:12:54
   |
12 | serde::format_description!(my_format, OffsetDateTime : "[year] [month]"); // not a comma
   |                                                      ^

error: invalid component name `bad` at byte index 1
  --> $DIR/invalid_serializer.rs:13:55
   |
13 | serde::format_description!(my_format, OffsetDateTime, "[bad]"); // bad component name
   |                                                       ^^^^^^^

error: expected string
  --> $DIR/invalid_serializer.rs:14:55
   |
14 | serde::format_description!(my_format, OffsetDateTime, not_string); // string format wrong type
   |                                                       ^^^^^^^^^^
